remove some noise on images, and optimize wrapping to prevent flickers

--- a/src/routes/about/styles/About.scss
+++ b/src/routes/about/styles/About.scss
@@ -1,23 +1,24 @@
 .funky-pattern::after{
-    position:absolute; width:0; height:0; overflow:hidden; z-index:-1; // hide images
-    content:url('../assets/Plain-Pink-Noise-min.png') url('../assets/Plain-Pink-Noise-min.png') url('../assets/FunkyScrib3-min.png')   // load images
+    position:absolute; width:0; height:0; overflow:hidden; z-index:-1;
+    content:url('../assets/Plain-Pink-Noise-min.png') url('../assets/Plain-Pink-Noise-min.png') url('../assets/Funky-Scrib3.png')  !important
  }
 
+ .funky-wrapper{
+    min-height: 100vh;
+    background-image: url('../assets/Plain-Pink-Noise-min.png');
+ }
 .funky-pattern{
     min-height: 100vh;
     background-size: cover;
     background-position: center;
 
-    @media screen and (max-width: 992px) {
-        background-image: url('../assets/Plain-Pink-Noise-min.png');
-    }
 
     @media screen and (max-width: 1400px) and (max-height: 768px) {
         background-image: url('../assets/Plain-Pink-Noise-min.png');
     }
 
     @media screen and (min-width: 768px) and (max-width: 1400px) and (min-height: 768px) {
-        background-image: url('../assets/FunkyScrib3-min.png');
+        background-image: url('../assets/Funky-Scrib3.png');
     }
 
     @media screen and (min-width: 1400px) {
